crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditional__iftrue.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditional/iftrue
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "The value is 1." [Ended]
outcome: Ended
