crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditional__shuffle.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditional/shuffle
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "Ace of Hearts.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "2 of Diamonds.\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "King of Spades.\n" [Choices: "Try again" (0) -> 0]
outcome: InputsExhausted
