crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditional__shuffle_once.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditional/shuffle_once
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "one\n" [Choices: "Try again" (0) -> 0]
> "\n" [Continue]
> "two\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
> "\n" [Choices: "Try again" (0) -> 0]
outcome: InputsExhausted
