crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__conditional__three-inline-conditionals.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/conditional/three-inline-conditionals
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "qs\n" [Ended]
outcome: Ended
